feat: pruebas de Caja Negra y Caja Blanca